--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "autoprefixer": "10.4.14",
+    "axios": "^1.5.0",
+    "ethers": "^6.7.1",
+    "ipfs-http-client": "^60.0.1",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
@@ -22,6 +25,7 @@
     "react-hook-form": "^7.45.0",
     "sharp": "^0.32.6",
     "swiper": "^9.4.1",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "web3modal": "^1.9.12"
   }
 }
