--- a/package.json
+++ b/package.json
@@ -13,23 +13,23 @@
     "@fontsource/lexend": "^5.0.3",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
-    "@turf/area": "^6.5.0",
+    "@react-leaflet/core": "^2.1.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
     "ethers": "^6.7.1",
     "ipfs-http-client": "^60.0.1",
-    "nebula.gl": "^1.0.4",
+    "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
-    "react-map-gl": "5.2.5",
-    "react-map-gl-draw": "0.18.4",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-draw": "^0.20.4",
     "react-scripts": "3.0.1",
     "sharp": "^0.32.6",
-    "styled-components": "5.1.0",
     "swiper": "^9.4.1",
     "tailwindcss": "3.3.2",
     "web3modal": "^1.9.12"
